# auction

./: .env.example  README.md  TODO.md  docker-compose.yml  openai_review.md  pyproject.toml
alembic/: env.py
alembic/versions/: b1cc668221ca_initial_schema.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/events/: __init__.py  firebase.py  interface.py  noop.py
app/models/: __init__.py  auction.py  bid.py  item.py  user.py
app/routers/: auctions.py  auth.py  items.py
app/schemas/: auction.py  bid.py  item.py  user.py
app/services/: auction.py  auth.py  bid.py  item.py
tests/: conftest.py  test_auctions.py  test_auth.py  test_bids.py  test_items.py
